syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "sbom/";
package puerco.protobom;

message Document {
    Metadata metadata = 1;
    repeated string root_elements = 2;
	repeated Node nodes = 3;
	repeated Edge edges = 4;
}

message Node {
    string id = 1;
    NodeType type = 2;
    string name = 3;
    string version = 4;    // Version string
    string file_name = 5;    // Package filename when there is one

    string url_home = 6; // Website of the packge
    string url_download = 7;    // Location to download the package

    repeated string licenses = 8; // Multiple for CDX 1.4, files in SPDX. Ideally license expressions
    string license_concluded = 9; // This is only in SPDX and it is just one
    string license_comments = 10;
    string copyright = 11;

    map<string,string> hashes = 12;
    string source_info = 13;     // any relevant background information or additional comments about the origin
    string primary_purpose = 14; // APPLICATION | FRAMEWORK | LIBRARY | CONTAINER | OPERATING-SYSTEM | DEVICE | FIRMWARE | SOURCE | ARCHIVE | FILE | INSTALL | OTHER |

    string comment = 15; 
    string summary = 16;      // Short package description
    string description = 17;  // Package description (full)

    repeated string attribution = 18; // One or more attribution texts
    repeated Person suppliers = 19;
    repeated Person originators = 20;

    google.protobuf.Timestamp release_date = 21;
    google.protobuf.Timestamp build_date = 22;
    google.protobuf.Timestamp valid_until_date = 23;

    repeated ExternalReference external_references = 24;
    repeated Identifier identifiers = 25;

    repeated string file_types = 27; // File types

    enum NodeType {
        PACKAGE = 0;
        FILE = 1;
    }
}

message Metadata {
    string id = 1; // Serial number in cyclone, SPDXID in spdx
    string version = 2; // Int in CDX, but lets string it to capture other possible schemes
    string name = 3;
    google.protobuf.Timestamp date = 4; // created date in spdx
    repeated Tool tools = 5;
    repeated Person authors = 6;
    string comment = 7;
}

message Edge {
    string type = 1;
    string from = 2;
    repeated string to = 3;
}

// ExternalReference is an entry linking an element to a resource defined outside the SBOM standard
message ExternalReference {
    string url = 1;
    string type = 2;
    string comment = 3;
    string authority = 4;
    map<string,string> hashes = 5;
}

message Person {
	string name = 1;
    bool is_org = 2;     
	string email  = 3;
	string url = 4;	
	string phone = 5;             // CDX
	repeated Person contacts = 6; // CDX // Support?
	// repeated PersonIdentifier identifiers // Support?
}

message Tool {
    string name = 1;
    string version = 2;
    string vendor = 3;
}


message Identifier {
    string type = 1;
    string value = 2;
}
